Make it more awesome

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav id="navbar">
-            <h1>Awesome Books</h1>
+            <h1 class="title-animate">Awesome Books</h1>
             <ul id="menu">
                 <li><a id="link_list" href="#">List</a></li>
                 <li><a id="add_link" href="#">Add</a></li>
@@ -23,7 +23,7 @@
     <main>
         <div id="date"></div>
         <section id="section_list" class="book_container">
-            <h1>All awesome books</h1>
+            <h1 class="topToBottom">All awesome books</h1>
             <ul id="book_list">
             </ul>
         </section>
